# shaderpixel_rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
assets/: download.sh
assets/shaders/: art2d.vert  art3d.vert  cloudycube.frag  gem.frag  mandelbox.frag  mandelbrot.frag  mandelbulb.frag  mengersponge.frag  mirror.frag  mozaic.frag  pillar.frag  player.frag  portal.frag  sdf_cat.frag  skybox.frag  solar.frag  truchet.frag
assets/shaders/includes/: fractal.glsl  lightning.glsl  palette.glsl
src/: app.rs  art.rs  art_objects.rs  camera.rs  fs.rs  gui.rs  main.rs
src/model/: env_generator.rs  mod.rs  obj.rs
src/vulkan/: app.rs  debug.rs  geometry.rs  helpers.rs  mod.rs  pipeline.rs  shader.rs  texture.rs  vertex.rs
