[package]
name = "shaderpixel_rs"
version = "0.1.0"
edition = "2021"
authors = ["Alex Thill"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
glam = "0.30"
log = "0.4"
raw-window-handle = "0.6"
shaderc = "0.8.3"
vulkano = "0.35"
vulkano-shaders = "0.35"
winit = "0.30"
